test/Fail/Issue6336.err
Issue6336.agda:8.1-10.27: error: [NotStrictlyPositive]
A is not strictly positive, because it occurs
in an argument of a bound variable
in an endpoint of the target of the higher constructor p
in the definition of A.
